--- a/css/index.css
+++ b/css/index.css
@@ -215,8 +215,7 @@
 }
 
 .service_item img {
-  width: 250px;
-  height: 250px;
+  width: auto;
   margin: 0 auto;
 }
 
@@ -252,7 +251,6 @@
 }
 
 .recruit_inner {
-  width: 40%;
   position: relative;
   left: 100px;
   top: 280px;
@@ -272,7 +270,7 @@
 
 .recruit h4 {
   font-size: 20px;
-  padding-top: 40px;
+  padding-top: 10px;
   color: #222;
 }
 
@@ -281,14 +279,15 @@
   padding-top: 50px;
 }
 
+
 .recruit .btn a {
-  text-align: center;
   background: #6DCAE2;
   padding: 20px 60px;
   position: relative;
-  top: 90px;
   color: #fff;
   font-weight: bold;
+  margin-top: 20px;
+  margin-left: 480px;
 }
 
 .recruit img {
